Fixed stylesheet image

--- a/maggicc/static/stylesheets/foundation/app.css
+++ b/maggicc/static/stylesheets/foundation/app.css
@@ -3,7 +3,7 @@
 body {
     font-family: 'Open Sans', 'Helvetica Nueve', sans-serif;
     padding-bottom: 5em;
-    background: #eee url(http://s.ytimg.com/yt/imgbin/www-refreshbg-vflC3wnbM.png) repeat 0 0;
+    background: #eee url(img/bg.png) repeat 0 0;
     font-size: 1.5em;
 }
 
