--- a/maggicc/templates/index.html
+++ b/maggicc/templates/index.html
@@ -19,7 +19,7 @@
         <a href="http://cv.maggi.cc/" class="right radius button black small">See my CV (PDF)</a>
   </section>
 
-  <div class="six columns">
+  <div class="six columns hide-for-small">
     <img id="my-photo" class="right" src="{{ url_for('static', filename='images/fede.jpg') }}" alt="Me" />
   </div>
 </header>
