--- a/maggicc/templates/publications.html
+++ b/maggicc/templates/publications.html
@@ -17,7 +17,7 @@
  {% for type in data.types_order %}
    {% if data.publications[type] %}
        {% if not loop.first %}<hr />{% endif %}
-       <h3 id="{{type|lower|replace(' ', '-')}}">{{type}} <a class="smooth glyph general" href="#page">w</a></h3>
+       <h3 id="{{type|lower|replace(' ', '-')}}">{{type}} <a class="smooth" href="#page"><i class="general foundicon-up-arrow">top</i></a></h3>
        {% for publication in data.publications[type]|publication_sorter %}
          {{ p.render_publication(publication.slug, publication.data, publication.snippet, publication.files) }}
        {% endfor %}
